objects/Release_Management__c.object
<CustomObject>
    <description>User requests from which a project is derived</description>
    <fields>
        <fullName>Administrative_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is Administrative Approval for project granted? Can only be filled out by Admin</inlineHelpText>
        <label>Administrative Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Priority__c</fullName>
        <inlineHelpText>Enter a priority of 1-10.</inlineHelpText>
        <label>Business Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Process__c</fullName>
        <label>Business Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Requesting__c</fullName>
        <label>Business Unit Requesting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit requesting</description>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Field Sales Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Field Sales Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY Field Sales Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD - Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD - Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status_Notes__c</fullName>
        <label>Current Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Historical_Status_Notes__c</fullName>
        <label>Historical Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Requests__c</fullName>
        <description>Count total number of requests</description>
        <label># of Requests</label>
        <summaryForeignKey>Request__c.Release_Management__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Requires Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production - Defect Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>JDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seltec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_By_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By (user)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Priority__c</fullName>
        <inlineHelpText>Enter a priority 1-50. NOTE: Only System Admins can enter a value.</inlineHelpText>
        <label>SFDC Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scale__c</fullName>
        <label>Scale</label>
        <picklist>
            <picklistValues>
                <fullName>Minor Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tweak Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report/Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Steering_Committee__c</fullName>
        <description>1 - Low
2 - Medium
3 - High
4 - Critical</description>
        <label>Steering Committee Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Purpose__c</fullName>
        <label>Strategic Purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Hours__c</fullName>
        <label>Total Estimated Hours</label>
        <summarizedField>Request__c.Total_Estimated_Hours__c</summarizedField>
        <summaryForeignKey>Request__c.Release_Management__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Type of Release Management</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DeltaDev Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Deployment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Priority__c</fullName>
        <inlineHelpText>1 - Low
2 - Medium
3 - High
4 - Critical</inlineHelpText>
        <label>User Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Release Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Target_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Excluding_Deployments</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Target_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>DeltaDev Deployment,Production Deployment</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Merged,Cancelled</value>
        </filters>
        <label>All - Excluding Deployments</label>
    </listViews>
    <listViews>
        <fullName>Business_Unit_Requests</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Business Unit</value>
        </filters>
        <label>Business Unit Requests</label>
    </listViews>
    <listViews>
        <fullName>Deltadev_Deployments</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Target_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DeltaDev Deployment</value>
        </filters>
        <label>Deltadev Deployments</label>
    </listViews>
    <listViews>
        <fullName>Post_Production_Projects</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Capital Project,Ops Project</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Production - Defect Fix,Completed</value>
        </filters>
        <label>Post Production Projects</label>
    </listViews>
    <listViews>
        <fullName>Production_Deployments</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Target_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Production Deployment</value>
        </filters>
        <label>Production Deployments</label>
    </listViews>
    <listViews>
        <fullName>Projects_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Request_Sponsor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Capital Project,Ops Project</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Production - Defect Fix,Completed,Merged,Cancelled</value>
        </filters>
        <label>Projects In Progress</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approval_by_Administrator_Only</fullName>
        <active>true</active>
        <description>Only top-level administrators may sign-off on requests.</description>
        <errorConditionFormula>AND(ISCHANGED(  Administrative_Approval__c  ),  Administrative_Approval__c   = TRUE, OR( LastModifiedBy.Profile.Name  &lt;&gt; "System Administrator",  LastModifiedBy.Profile.Name  &lt;&gt; "Delegated Admin",  LastModifiedBy.Profile.Name  &lt;&gt; "Delta Technology"))</errorConditionFormula>
        <errorDisplayField>Administrative_Approval__c</errorDisplayField>
        <errorMessage>Only System Administrators can give Administrative Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Business_Priority</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Business_Priority__c &gt; 10,Business_Priority__c = 0)</errorConditionFormula>
        <errorDisplayField>Business_Priority__c</errorDisplayField>
        <errorMessage>Enter a Priority between 1 &amp; 10.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Release_Date_Validation</fullName>
        <active>true</active>
        <description>Release Date cannot be an earlier date than start date</description>
        <errorConditionFormula>Start_Date__c &gt;  Release_Date__c</errorConditionFormula>
        <errorDisplayField>Release_Date__c</errorDisplayField>
        <errorMessage>Release Date cannot be an earlier date than start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SFDC_Priority</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND($Profile.Id &lt;&gt; '00e70000000s6G2',  SFDC_Priority__c &gt;= 0),   AND(SFDC_Priority__c &gt; 50,SFDC_Priority__c = 0))</errorConditionFormula>
        <errorDisplayField>SFDC_Priority__c</errorDisplayField>
        <errorMessage>Enter a value between 1-50. NOTE: Only System Administrators can update this field.</errorMessage>
    </validationRules>
</CustomObject>